--- a/app/src/main/res/layout/activity_support2.xml
+++ b/app/src/main/res/layout/activity_support2.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_dashboard"
-    tools:context=".Support2">
+    tools:context=".View.Support2">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline41"
@@ -84,6 +84,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:text="TextView"
+        android:autoLink="email"
         android:textSize="15sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
@@ -108,7 +109,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:text="TextView"
+        android:text="Phone"
+        android:inputType="phone"
+        android:autoLink="phone"
         android:textSize="15sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
@@ -123,16 +126,15 @@
         android:layout_marginTop="32dp"
         android:clickable="true"
         android:text="Press here to see our location on campus"
+        android:textColor="@color/colorPrimary"
         android:textSize="15sp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline43"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.355"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_contact_number_support2"
-        app:layout_constraintVertical_bias="0.164" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_contact_number_support2" />
 
     <ImageView
-        android:id="@+id/iv_dashboard_bottom_support"
+        android:id="@+id/iv_dashboard_bottom_support2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -147,11 +149,11 @@
         android:id="@+id/iv_timetable_bottom_support2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginLeft="36dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="16dp"
         android:clickable="true"
-        app:layout_constraintStart_toEndOf="@+id/iv_dashboard_bottom_support"
+        app:layout_constraintStart_toEndOf="@+id/iv_dashboard_bottom_support2"
         app:layout_constraintTop_toTopOf="@+id/guideline43"
         app:srcCompat="@drawable/calendar_small" />
 
@@ -159,8 +161,8 @@
         android:id="@+id/iv_library_bottom_support2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginLeft="28dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="12dp"
         android:clickable="true"
         app:layout_constraintStart_toEndOf="@+id/iv_timetable_bottom_support2"
@@ -171,9 +173,9 @@
         android:id="@+id/iv_forum_bottom_support2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="16dp"
         android:clickable="true"
         app:layout_constraintStart_toEndOf="@+id/iv_market_bottom_support2"
         app:layout_constraintTop_toTopOf="@+id/guideline43"
@@ -183,9 +185,9 @@
         android:id="@+id/iv_market_bottom_support2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
         android:clickable="true"
         app:layout_constraintStart_toEndOf="@+id/iv_library_bottom_support2"
         app:layout_constraintTop_toTopOf="@+id/guideline43"
@@ -195,13 +197,14 @@
         android:id="@+id/iv_moodle_bottom_support2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
         android:clickable="true"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.472"
         app:layout_constraintStart_toEndOf="@+id/iv_forum_bottom_support2"
         app:layout_constraintTop_toTopOf="@+id/guideline43"
         app:srcCompat="@drawable/moodle_small" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
