--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -49,14 +49,14 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:background="@drawable/round_corners"
-        android:drawableBottom="@drawable/calendar_menu"
+        android:drawableBottom="@drawable/calendar"
         android:text="Timetable"
         android:textColor="@android:color/white"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.2"
+        app:layout_constraintHorizontal_bias="0.199"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.328" />
@@ -70,7 +70,7 @@
         android:layout_marginRight="8dp"
         android:background="@drawable/round_corners"
         android:clickable="true"
-        android:drawableBottom="@drawable/library_menu"
+        android:drawableBottom="@drawable/library_icon"
         android:text="Library"
 
         android:textColor="@android:color/white"
@@ -93,7 +93,7 @@
         android:layout_marginTop="2dp"
         android:background="@drawable/round_corners"
         android:clickable="true"
-        android:drawableBottom="@drawable/forum_small"
+        android:drawableBottom="@drawable/forum"
         android:text="Forum"
 
         android:textColor="@android:color/white"
@@ -116,8 +116,8 @@
         android:layout_marginRight="8dp"
         android:background="@drawable/round_corners"
         android:clickable="true"
-        android:drawableBottom="@drawable/help_menu"
-        android:text="Help"
+        android:drawableBottom="@drawable/support"
+        android:text="Support"
 
         android:textColor="@android:color/white"
         android:textSize="14sp"
@@ -139,7 +139,7 @@
         android:layout_marginTop="2dp"
         android:background="@drawable/round_corners"
         android:clickable="true"
-        android:drawableBottom="@drawable/moodle_menu"
+        android:drawableBottom="@drawable/moodle"
         android:text="Moodle"
 
         android:textColor="@android:color/white"
@@ -162,7 +162,7 @@
         android:layout_marginRight="8dp"
         android:background="@drawable/round_corners"
         android:clickable="true"
-        android:drawableBottom="@drawable/market_menu"
+        android:drawableBottom="@drawable/market"
         android:text="Books for sale"
         android:textColor="@android:color/white"
         android:textSize="14sp"
