--- a/app/src/main/res/layout/activity_floors.xml
+++ b/app/src/main/res/layout/activity_floors.xml
@@ -11,7 +11,7 @@
         android:id="@+id/img_floor_floors"
         android:layout_width="match_parent"
         android:layout_height="469dp"
-        android:src="@drawable/library"
+        android:src="@drawable/library_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
