--- a/app/src/main/res/layout/activity_item_list.xml
+++ b/app/src/main/res/layout/activity_item_list.xml
@@ -111,81 +111,81 @@
 
     <ImageView
         android:id="@+id/iv_library_bottom_itemList"
-        android:layout_width="54dp"
-        android:layout_height="45dp"
+        android:layout_width="53dp"
+        android:layout_height="35dp"
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.422"
+        app:layout_constraintHorizontal_bias="0.421"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline2"
-        app:layout_constraintVertical_bias="0.904"
-        app:srcCompat="@drawable/library_small" />
+        app:layout_constraintVertical_bias="0.788"
+        app:srcCompat="@drawable/library_icon" />
 
     <ImageView
         android:id="@+id/iv_forum_bottom_itemList"
         android:layout_width="53dp"
-        android:layout_height="39dp"
+        android:layout_height="35dp"
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.586"
+        app:layout_constraintHorizontal_bias="0.592"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline2"
-        app:layout_constraintVertical_bias="0.791"
-        app:srcCompat="@drawable/forum_small" />
+        app:layout_constraintVertical_bias="0.788"
+        app:srcCompat="@drawable/forum" />
 
     <ImageView
         android:id="@+id/iv_timetable_bottom_itemList"
         android:layout_width="53dp"
-        android:layout_height="41dp"
+        android:layout_height="35dp"
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.245"
+        app:layout_constraintHorizontal_bias="0.234"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline2"
-        app:layout_constraintVertical_bias="0.826"
-        app:srcCompat="@drawable/calendar_small" />
+        app:layout_constraintVertical_bias="0.788"
+        app:srcCompat="@drawable/calendar" />
 
     <ImageView
         android:id="@+id/iv_moodle_bottom_itemList"
-        android:layout_width="39dp"
-        android:layout_height="42dp"
+        android:layout_width="53dp"
+        android:layout_height="35dp"
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.747"
+        app:layout_constraintHorizontal_bias="0.776"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline2"
-        app:layout_constraintVertical_bias="0.822"
-        app:srcCompat="@drawable/moodle_small" />
+        app:layout_constraintVertical_bias="0.788"
+        app:srcCompat="@drawable/moodle" />
 
     <ImageView
         android:id="@+id/iv_help_bottom_itemList"
-        android:layout_width="60dp"
-        android:layout_height="49dp"
+        android:layout_width="53dp"
+        android:layout_height="35dp"
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.928"
+        app:layout_constraintHorizontal_bias="0.955"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline2"
-        app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/help_small" />
+        app:layout_constraintVertical_bias="0.788"
+        app:srcCompat="@drawable/support" />
 
     <ImageView
         android:id="@+id/iv_dashboard_bottom_itemList"
-        android:layout_width="47dp"
-        android:layout_height="33dp"
+        android:layout_width="53dp"
+        android:layout_height="35dp"
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.082"
+        app:layout_constraintHorizontal_bias="0.044"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline2"
-        app:layout_constraintVertical_bias="0.777"
-        app:srcCompat="@drawable/dashboard_icon" />
+        app:layout_constraintVertical_bias="0.788"
+        app:srcCompat="@drawable/home" />
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
@@ -251,14 +251,13 @@
 
     <ImageView
         android:id="@+id/iv_market_itemlist"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/guideline3"
-        app:layout_constraintEnd_toStartOf="@+id/iv_moodle_bottom_itemList"
-        app:layout_constraintHorizontal_bias="0.558"
-        app:layout_constraintStart_toEndOf="@+id/iv_library_bottom_itemList"
+        android:layout_width="53dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.592"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline2"
-        app:layout_constraintVertical_bias="0.77"
-        app:srcCompat="@drawable/market_small" />
+        app:srcCompat="@drawable/market" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
