--- a/app/src/main/res/layout/activity_topic_detail.xml
+++ b/app/src/main/res/layout/activity_topic_detail.xml
@@ -50,18 +50,19 @@
 
     <TextView
         android:id="@+id/tv_desc_topicDetail"
-        android:layout_width="370dp"
+        android:layout_width="355dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_author_libBookDetail"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="5dp"
         android:inputType="textMultiLine"
         android:text="Description"
+        app:layout_constraintBottom_toTopOf="@+id/guideline"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.357"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_subject_topicDetail" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_subject_topicDetail"
+        app:layout_constraintVertical_bias="0.166" />
 
     <TextView
         android:id="@+id/tv_date_topicDetail"
@@ -112,16 +113,17 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_threads_topicDetail"
-        android:layout_width="409dp"
-        android:layout_height="361dp"
+        android:layout_width="wrap_content"
+        android:layout_height="311dp"
         android:layout_marginTop="16dp"
-        android:paddingRight="15dp"
         android:padding="10dp"
+        android:paddingRight="15dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline35"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.975" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline35"
@@ -136,12 +138,11 @@
         android:id="@+id/btn_post_topicDetail"
         android:layout_width="126dp"
         android:layout_height="36dp"
-        android:layout_marginStart="140dp"
-        android:layout_marginLeft="140dp"
         android:layout_marginTop="12dp"
         android:background="@drawable/round_corners"
         android:text="Add Comment"
         android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline35" />
 
