--- a/app/src/main/res/layout/activity_new_topic.xml
+++ b/app/src/main/res/layout/activity_new_topic.xml
@@ -10,9 +10,9 @@
 
     <EditText
         android:id="@+id/et_desc_newTopic"
-        android:layout_width="241dp"
-        android:layout_height="250dp"
-        android:layout_marginTop="28dp"
+        android:layout_width="251dp"
+        android:layout_height="288dp"
+        android:layout_marginTop="8dp"
         android:background="@color/white"
         android:ems="10"
         android:gravity="start|top"
@@ -20,7 +20,6 @@
         android:inputType="textMultiLine"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline29" />
 
@@ -28,12 +27,11 @@
         android:id="@+id/btn_publish_newTopic"
         android:layout_width="118dp"
         android:layout_height="29dp"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="88dp"
         android:background="@drawable/roundbutton"
         android:text="Publish"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline30" />
 
@@ -41,13 +39,12 @@
         android:id="@+id/et_subject_newTopic"
         android:layout_width="258dp"
         android:layout_height="39dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="16dp"
         android:hint="Topic Subject"
         android:textColor="#B2B6B6"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/guideline28" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline28"
@@ -63,7 +60,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="20dp"
-        app:layout_constraintGuide_percent="0.17" />
+        app:layout_constraintGuide_percent="0.1" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline30"
@@ -71,14 +68,14 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="20dp"
-        app:layout_constraintGuide_percent="0.5" />
+        app:layout_constraintGuide_percent="0.7" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline31"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="1.0"
+        app:layout_constraintGuide_percent="0.82"
         app:layout_constraintGuide_begin="20dp" />
 
 
