--- a/app/src/main/res/layout/activity_item_list.xml
+++ b/app/src/main/res/layout/activity_item_list.xml
@@ -88,27 +88,28 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_books_itemList"
-        android:layout_width="match_parent"
-        android:layout_height="433dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline2"
+        android:layout_width="413dp"
+        android:layout_height="382dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline21"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="@+id/guideline21" />
 
     <Button
         android:id="@+id/btn_topic_itemList"
         android:layout_width="132dp"
         android:layout_height="35dp"
-        android:layout_marginTop="8dp"
         android:background="@drawable/roundbutton"
         android:gravity="center"
         android:text="Start New Topic"
         android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rv_books_itemList" />
+        app:layout_constraintTop_toTopOf="@+id/guideline24"
+        app:layout_constraintVertical_bias="0.958" />
 
     <ImageView
         android:id="@+id/iv_library_bottom_itemList"
@@ -207,7 +208,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.2"
+        app:layout_constraintGuide_percent="0.8"
         app:layout_constraintGuide_begin="20dp" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -247,7 +248,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.20"
+        app:layout_constraintGuide_percent="0.2"
         app:layout_constraintGuide_begin="20dp" />
 
     <ImageView
